--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div>
       <a
-        href="https://discord.com/api/oauth2/authorize?client_id=1014421225361133609&redirect_uri=http%3A%2F%2Flocalhost%3A53134&response_type=code&scope=identify"
+        href="https://discord.com/api/oauth2/authorize?client_id=1014421225361133609&redirect_uri=http%3A%2F%2Flocalhost%3A3000&response_type=code&scope=identify"
         >인증링크</a
       >
     </div>
@@ -109,7 +109,7 @@ let wallet_addr = null;
             client_secret: "cTL8_aYCp5smafvCopLMNCArlWtwEcjm",
             code,
             grant_type: "authorization_code",
-            redirect_uri: "http://localhost:53134",
+            redirect_uri: "http://localhost:8020",
             scope: "identify",
           }),
           headers: {
