--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button id="btn_discord_connect" disabled onclick="onDiscordConnect()">
       디스코드와 지갑 연결
     </button>
-
+    <script src="/index.js"></script>
     <script>
       src="https://cdnjs.cloudflare.com/ajax/libs/caver-js/1.8.2-rc.2/caver.min.js"
       integrity="sha512-rTMBo92zKbPeNgx+xiIBMJk83YqrQCpYTwMfePJYqKGlTa5ye6qSToRQaXzmCuPFLNClRU3ZXpU77x8ZvyztDQ=="
